[package]
name = "fxt-update-helper"
version = "1.0.0"
edition = "2021"
description = "Native auto-update helper for FreeXmlToolkit (Windows-only)"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",            # Required to expose CreateProcessW
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",  # Provides SYNCHRONIZE constant
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
# Faster dev compile times
opt-level = 0
